fix code blocks dismissing spaces when wrapping white space

--- a/components/content/content-viewer/components/code/code.styl
+++ b/components/content/content-viewer/components/code/code.styl
@@ -29,4 +29,4 @@
 		font-size: inherit
 
 .content-viewer-nocode
-	white-space: pre-line
+	white-space: pre-wrap
